--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vueform/multiselect": "^1.5.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "roboto-fontface": "*",
